--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,14 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/header.html"></include>
+    <main>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/about-us.html"></include>
+      <include src="./partials/services.html"></include>
+      <include src="./partials/ready.html"></include>
+      <include src="./partials/blogs.html"></include>
+    </main>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
