--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,15 @@
       href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <!-- <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    /> -->
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
@@ -24,5 +33,18 @@
       <include src="./partials/blogs.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
+    <!-- <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('.services__list').slick({
+          infinite: true,
+          slidesToShow: 4,
+          slidesToScroll: 4,
+        });
+      });
+    </script> -->
   </body>
 </html>
